# matryx-shadertoy-streamer

./: CMakeLists.txt  README.md
src/: main.cpp
